--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,14 +4,14 @@ import Projects from "../components/Projects.astro";
 import StackTechnologies from "../components/StackTechnologies.astro";
 import Socials from "../components/Socials.astro";
 import Layout from "../layouts/Layout.astro";
+import Inspiration from "../components/Inspiration.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-  <main class="grid grid-cols-12 h-screen grid-rows-12 mt-1 gap-1 w-[900px]">
+  <main class="grid grid-cols-12 h-screen grid-rows-12 mt-1 gap-4 w-[900px]">
     <Presentation />
     <StackTechnologies />
     <Projects />
+    <Inspiration />
   </main>
 </Layout>
-
-<style></style>
