--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -8,7 +8,10 @@ import ProjectOptions from "./ProjectOptions.astro";
       Proyecto que representa el tipico todo list construido con react y consumo
       de servicio externo para manejo del mismo
     </p>
-    <ProjectOptions hrefGit="" hrefWeb="" />
+    <ProjectOptions
+      hrefGit="https://github.com/GuarU345/todo-list.git"
+      hrefWeb="https://guaru345todo-list.netlify.app"
+    />
   </div>
 </section>
 <section id="spotify" class="col-span-7 row-span-4 rounded-md">
@@ -18,7 +21,10 @@ import ProjectOptions from "./ProjectOptions.astro";
       interactuar con los albums guardandolos en tu biblioteca y crear las
       playlists que desees donde podras guardar tu musica favorita
     </p>
-    <ProjectOptions hrefGit="" hrefWeb="" />
+    <ProjectOptions
+      hrefGit="https://github.com/GuarU345/spotify-clone-react-ts.git"
+      hrefWeb=""
+    />
   </div>
 </section>
 <section id="pokedex" class="col-span-5 p-6 row-span-3 rounded-md">
@@ -28,7 +34,10 @@ import ProjectOptions from "./ProjectOptions.astro";
       generacion incluye un buscador en el cual podras buscar a tu pokemon
       favorito
     </p>
-    <ProjectOptions hrefGit="" hrefWeb="" />
+    <ProjectOptions
+      hrefGit="https://github.com/GuarU345/pokedex_react.git"
+      hrefWeb="https://pokedex-guaru345.netlify.app"
+    />
   </div>
 </section>
 
