redesign all project

--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -1,12 +1,23 @@
 <section
-  class="col-span-7 row-span-4 flex flex-col justify-center rounded-md bg-gradient-to-tr from-cyan-500 to-blue-500"
+  class="col-span-8 row-span-12 flex flex-col border-2 justify-center rounded-md"
 >
-  <div class="px-4 py-2 flex flex-col gap-1">
-    <img class="w-16 h-16 rounded-full" src="yo.jpg" alt="dev guaru345 photo" />
-    <p class="text-balance text-xl">
-      Hola, mi nombre es Abel Omar y soy Desarrollador Full Stack, desde hace
-      mas de 2 años me he dedicado a innovar y crear soluciones perfectas para
-      obtener los mejores resultados.
-    </p>
+  <div class="px-6 py-2 flex items-center gap-4">
+    <img
+      class="w-56 h-56 ml-4 rounded-full"
+      src="yo_2.jpg"
+      alt="dev guaru345 photo"
+    />
+    <div>
+      <p class="text-balance text-3xl">Hola, soy Abel Omar</p>
+      <p class="text-pretty mt-2">
+        Desarrollador Full Stack desde hace mas de 2 años, soy una persona
+        <span class="text-xl">apasionada</span> y <span class="text-xl"
+          >dedicada</span
+        > a la cual le gustan los retos y desafios, lo cual eso me llevo a descubrir
+        el maravilloso mundo de la programaciòn.
+      </p>
+    </div>
   </div>
 </section>
+
+<style></style>
