--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,144 +1,13 @@
 ---
-import ProjectOptions from "./ProjectOptions.astro";
+
 ---
 
-<section id="todo" class="col-span-5 row-span-3 rounded-md">
-  <div id="todo-content">
-    <p>
-      Proyecto que representa el tipico todo list construido con react y consumo
-      de servicio externo para manejo del mismo
-    </p>
-    <ProjectOptions
-      hrefGit="https://github.com/GuarU345/todo-list.git"
-      hrefWeb="https://guaru345todo-list.netlify.app"
-    />
-  </div>
-</section>
-<section id="spotify" class="col-span-7 row-span-4 rounded-md">
-  <div id="spotify-content">
-    <p>
-      Clon de spotify donde podras reproducir musica a tu gusto y ademas
-      interactuar con los albums guardandolos en tu biblioteca y crear las
-      playlists que desees donde podras guardar tu musica favorita
-    </p>
-    <ProjectOptions
-      hrefGit="https://github.com/GuarU345/spotify-clone-react-ts.git"
-      hrefWeb=""
-    />
-  </div>
-</section>
-<section id="pokedex" class="col-span-5 p-6 row-span-3 rounded-md">
-  <div id="pokedex-content">
-    <p>
-      Pequeña pokedex donde podras observar a los pokemones de la primera
-      generacion incluye un buscador en el cual podras buscar a tu pokemon
-      favorito
-    </p>
-    <ProjectOptions
-      hrefGit="https://github.com/GuarU345/pokedex_react.git"
-      hrefWeb="https://pokedex-guaru345.netlify.app"
-    />
+<section
+  class="grid place-content-center col-span-12 row-span-2 border-2 rounded-md"
+>
+  <div class="flex justify-center items-center">
+    <a href="/projects"><p>Ver Proyectos</p></a>
   </div>
 </section>
 
-<style>
-  #todo {
-    position: relative;
-    background-image: url("todo-list.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    transition: opacity;
-  }
-
-  #todo-content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: 16px;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    padding: 2rem;
-    text-wrap: pretty;
-    @apply bg-gradient-to-tr from-cyan-500 to-blue-500 rounded-md;
-  }
-
-  #todo:hover {
-    background-image: none;
-    cursor: pointer;
-    #todo-content {
-      opacity: 1;
-    }
-  }
-  #spotify {
-    position: relative;
-    background-image: url("spotify.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-
-  #spotify-content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: 16px;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    padding: 2rem;
-    text-wrap: pretty;
-    @apply bg-gradient-to-tr from-cyan-500 to-blue-500 rounded-md;
-  }
-
-  #spotify:hover {
-    background-image: none;
-    cursor: pointer;
-    #spotify-content {
-      opacity: 1;
-    }
-  }
-  #pokedex {
-    position: relative;
-    background-image: url("pokedex.png");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-
-  #pokedex-content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: 16px;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    padding: 2rem;
-    text-wrap: pretty;
-    @apply bg-gradient-to-tr from-cyan-500 to-blue-500 rounded-md;
-  }
-
-  #pokedex:hover {
-    background-image: none;
-    cursor: pointer;
-    #pokedex-content {
-      opacity: 1;
-    }
-  }
-</style>
+<style></style>
