--- a/src/components/StackTechnologies.astro
+++ b/src/components/StackTechnologies.astro
@@ -2,11 +2,8 @@
 import TechIcon from "./TechIcon.astro";
 ---
 
-<section
-  class="col-span-5 row-span-4 bg-gradient-to-tr from-cyan-500 to-blue-500 rounded-md"
->
-  <h3 class="text-center text-lg">Tecnologias que uso</h3>
-  <div class="flex p-4 flex-wrap items-center mt-4 justify-center gap-8">
+<section class="col-span-4 row-span-7 rounded-md border-2">
+  <div class="grid grid-cols-4 place-content-center p-4 gap-4">
     <TechIcon
       src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg"
       alt="html5"
