--- a/src/components/Inspiration.astro
+++ b/src/components/Inspiration.astro
@@ -1,5 +1,6 @@
 <section
-  class="col-span-7 row-span-2 flex flex-col justify-center items-center rounded-md bg-gradient-to-tr from-cyan-500 to-blue-500"
+  class="col-span-4 row-span-5 flex flex-col border-2 justify-center items-center rounded-md"
 >
-  <p class="text-xl">SI PUEDES IMAGINARLO, PUEDES CREARLO</p>
+  <p class="text-xl text-center">"SI PUEDES IMAGINARLO, PUEDES CREARLO"</p>
+  <p>Walt Disney</p>
 </section>
