--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,12 +17,16 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
+    <div
+      class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"
+    >
+    </div>
     <slot />
   </body>
 </html>
 <style is:global>
   @import url("https://fonts.googleapis.com/css2?family=Onest&display=swap");
   body {
-    @apply p-2 flex flex-col items-center h-full bg-zinc-950 text-white  font-['Onest'];
+    @apply p-2 flex flex-col items-center h-screen overflow-hidden  text-white  font-['Onest'];
   }
 </style>
