--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,16 +2,19 @@
 import Presentation from "../components/Presentation.astro";
 import Projects from "../components/Projects.astro";
 import StackTechnologies from "../components/StackTechnologies.astro";
-import Socials from "../components/Socials.astro";
 import Layout from "../layouts/Layout.astro";
 import Inspiration from "../components/Inspiration.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-  <main class="grid grid-cols-12 h-screen grid-rows-12 mt-1 gap-4 w-[900px]">
-    <Presentation />
-    <StackTechnologies />
-    <Projects />
-    <Inspiration />
+  <main class="grid grid-rows-12 h-screen mt-1 gap-4 w-[900px]">
+    <section class="grid grid-cols-12 grid-rows-12 row-span-8 gap-6">
+      <Presentation />
+      <StackTechnologies />
+      <Inspiration />
+    </section>
+    <section class="grid">
+      <Projects />
+    </section>
   </main>
 </Layout>
