add new sections and redesign

--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -1,7 +1,7 @@
 <section
   class="col-span-8 row-span-12 flex flex-col border-2 justify-center rounded-md"
 >
-  <div class="px-6 py-2 flex items-center gap-4">
+  <div class="px-6 lg:px-4 py-2 flex items-center gap-4">
     <img
       class="w-56 h-56 ml-4 rounded-full"
       src="yo_2.jpg"
