--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -1,14 +1,10 @@
 ---
-import SocialIcon from "./SocialIcon.astro";
+
 ---
 
 <section
-  class="col-span-5 row-span-1 flex gap-2 items-center justify-center text-center text-2xl bg-gradient-to-r from-cyan-500 to-blue-500 rounded-md"
+  class="col-span-6 flex gap-4 justify-center items-center border-2 rounded-md"
 >
-  <SocialIcon
-    href="https://github.com/GuarU345"
-    src="github.svg"
-    alt="github"
-  />
-  <SocialIcon src="email.svg" alt="email" href="mailto:abelmtz34@outlook.com" />
+  <p>Correo</p>
+  <p>Linkedin</p>
 </section>
