--- a/src/components/StackTechnologies.astro
+++ b/src/components/StackTechnologies.astro
@@ -2,8 +2,10 @@
 import TechIcon from "./TechIcon.astro";
 ---
 
-<section class="col-span-4 row-span-7 rounded-md border-2">
-  <div class="grid grid-cols-4 place-content-center p-4 gap-4">
+<section
+  class="col-span-4 row-span-7 grid place-content-center rounded-md border-2"
+>
+  <div class="grid grid-cols-4 p-4 gap-4 lg:gap-y-10">
     <TechIcon
       src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg"
       alt="html5"
@@ -33,7 +35,7 @@ import TechIcon from "./TechIcon.astro";
       alt="nodejs"
     />
     <TechIcon
-      src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original-wordmark.svg"
+      src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg"
       alt="express"
     />
     <TechIcon
