--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Layout from "../layouts/Layout.astro";
 import Inspiration from "../components/Inspiration.astro";
 import Github from "../components/Github.astro";
 import Socials from "../components/Socials.astro";
+import Linkedin from "../components/Linkedin.astro";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -20,6 +21,7 @@ import Socials from "../components/Socials.astro";
     </section>
     <section class="grid grid-cols-12 gap-4">
       <Github />
+      <Linkedin />
     </section>
     <section></section>
   </main>
