add most important project and create component to show laboral experience

--- a/src/components/JobsContainer.astro
+++ b/src/components/JobsContainer.astro
@@ -3,10 +3,10 @@ import ArrowIcon from "./icons/Arrow.astro";
 ---
 
 <a
-  href="/projects"
+  href="/jobs"
   class="flex justify-between items-center gap-4 px-2 col-span-12 border-2 h-[70px] rounded-md hover:scale-105 transition-transform"
 >
   <p></p>
-  <p>PROYECTOS</p>
+  <p>EXPERIENCIA LABORAL</p>
   <ArrowIcon class="text-white" />
 </a>
