--- a/src/components/Linkedin.astro
+++ b/src/components/Linkedin.astro
@@ -6,12 +6,12 @@ import LinkedIcon from "./icons/LinkedIcon.astro";
 <a
   href="https://www.linkedin.com/in/abel-omar-dominguez-martinez-083264256/"
   target="_blank"
-  class="col-span-6 h-[200px] border-2 p-4 hover:scale-105"
+  class="col-span-6 h-[200px] relative border-2 p-4 hover:scale-105"
 >
-  <div class="flex justify-end">
+  <div class="absolute right-0 px-4">
     <GoToIcon />
   </div>
-  <div class="grid place-content-center">
+  <div class="flex justify-center items-center h-full">
     <LinkedIcon />
   </div>
 </a>
