--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Inspiration from "../components/Inspiration.astro";
 import Github from "../components/Github.astro";
 import Socials from "../components/Socials.astro";
 import Linkedin from "../components/Linkedin.astro";
+import JobsContainer from "../components/JobsContainer.astro";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -23,6 +24,8 @@ import Linkedin from "../components/Linkedin.astro";
       <Github />
       <Linkedin />
     </section>
-    <section></section>
+    <section>
+      <JobsContainer />
+    </section>
   </main>
 </Layout>
