--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -11,10 +11,12 @@
       <p class="text-balance text-3xl">Hola, soy Abel Omar</p>
       <p class="text-pretty mt-2">
         Desarrollador Full Stack desde hace mas de 2 años, soy una persona
-        <span class="text-xl">apasionada</span> y <span class="text-xl"
-          >dedicada</span
-        > a la cual le gustan los retos y desafios, lo cual eso me llevo a descubrir
-        el maravilloso mundo de la programaciòn.
+        apasionada dedicada a la que le encantan los retos y desafios. Esta
+        pasion me llevó a descubrir el maravilloso mundo de la programación.
+      </p>
+      <p class="mt-2">
+        "Mi compromiso y entusiasmo se reflejan en cada proyecto en el que
+        participo"
       </p>
     </div>
   </div>
