change text of inspiration component and another minor changes

--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -14,9 +14,9 @@
         apasionada dedicada a la que le encantan los retos y desafios. Esta
         pasion me llevó a descubrir el maravilloso mundo de la programación.
       </p>
-      <p class="mt-2">
-        "Mi compromiso y entusiasmo se reflejan en cada proyecto en el que
-        participo"
+      <p>
+        Mi compromiso y entusiasmo se reflejan en cada proyecto en el que
+        participo.
       </p>
     </div>
   </div>
