--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,9 @@
 ---
 import Presentation from "../components/Presentation.astro";
-import Projects from "../components/Projects.astro";
 import StackTechnologies from "../components/StackTechnologies.astro";
 import Layout from "../layouts/Layout.astro";
 import Inspiration from "../components/Inspiration.astro";
-import Github from "../components/Github.astro";
-import Linkedin from "../components/Linkedin.astro";
-import JobsContainer from "../components/JobsContainer.astro";
+import Jobs from "../components/Jobs.astro";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -16,15 +13,9 @@ import JobsContainer from "../components/JobsContainer.astro";
       <StackTechnologies />
       <Inspiration />
     </section>
-    <section class="grid grid-cols-12">
-      <Projects />
-    </section>
-    <section class="grid grid-cols-12 gap-4">
-      <Github />
-      <Linkedin />
-    </section>
+    <section class="grid place-content-center">Proyectos</section>
     <section>
-      <JobsContainer />
+      <Jobs />
     </section>
   </main>
 </Layout>
