--- a/src/pages/jobs.astro
+++ b/src/pages/jobs.astro
@@ -2,4 +2,8 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="experiencia laboral" />
+<Layout title="experiencia laboral">
+  <main class="grid h-screen mt-1">
+    
+  </main>
+</Layout>
