change to another design

--- a/src/components/Inspiration.astro
+++ b/src/components/Inspiration.astro
@@ -1,6 +1,8 @@
 <section
-  class="col-span-4 row-span-5 flex flex-col border-2 justify-center items-center rounded-md"
+  class="col-span-4 row-span-2 flex flex-col border-2 border-transparent justify-center items-center rounded-xl bg-zinc-900"
 >
-  <p class="text-xl text-center">"SI PUEDES IMAGINARLO, PUEDES CREARLO"</p>
-  <p>Walt Disney</p>
+  <p class="text-xl text-center font-bold">
+    "SI PUEDES IMAGINARLO, PUEDES CREARLO"
+  </p>
+  <p class="text-gray-400">Walt Disney</p>
 </section>
