--- a/src/components/StackTechnologies.astro
+++ b/src/components/StackTechnologies.astro
@@ -3,9 +3,9 @@ import TechIcon from "./TechIcon.astro";
 ---
 
 <section
-  class="col-span-4 row-span-7 grid place-content-center rounded-md border-2"
+  class="col-span-4 row-span-2 grid place-content-center rounded-xl border-2 border-transparent bg-zinc-900"
 >
-  <div class="grid grid-cols-4 p-4 gap-4 lg:gap-y-10">
+  <div class="grid place-content-center grid-cols-4 p-4 gap-4 lg:gap-y-10">
     <TechIcon
       src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg"
       alt="html5"
