--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,11 +16,8 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="relative text-black dark:text-white">
-    <div
-      class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"
-    >
-    </div>
+  <body class="relative text-white">
+    
     <slot />
   </body>
 </html>
@@ -33,6 +30,7 @@ const { title } = Astro.props;
   }
 
   body {
+    background-color: rgb(15, 16, 22);
     color: rgba(17, 17, 17, 0.9);
     display: flex;
     flex-direction: column;
