--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -5,7 +5,7 @@ import GithubIcon from "./icons/GithubIcon.astro";
 ---
 
 <section
-  class="col-span-8 row-span-4 border-2 p-4 border-transparent flex items-end rounded-xl bg-zinc-900"
+  class="col-span-8 row-span-4 border-2 p-4 border-transparent flex items-end rounded-xl"
 >
   <div class="flex flex-col gap-y-2">
     <p class="text-pretty text-2xl font-bold">Abel Omar Domínguez Martínez</p>
@@ -30,5 +30,6 @@ import GithubIcon from "./icons/GithubIcon.astro";
     background-image: url("/yo_2.jpg");
     background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
   }
 </style>
