--- a/src/components/StackTechnologies.astro
+++ b/src/components/StackTechnologies.astro
@@ -3,7 +3,7 @@ import TechIcon from "./TechIcon.astro";
 ---
 
 <section
-  class="col-span-4 row-span-2 grid place-content-center rounded-xl border-2 border-transparent bg-zinc-900"
+  class="col-span-4 row-span-2 grid place-content-center rounded-xl border-2 border-transparent bg-zinc-800"
 >
   <div class="grid place-content-center grid-cols-4 p-4 gap-4 lg:gap-y-10">
     <TechIcon
@@ -27,7 +27,7 @@ import TechIcon from "./TechIcon.astro";
       alt="react"
     />
     <TechIcon
-      src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-plain.svg"
+      src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg"
       alt="tailwindcss"
     />
     <TechIcon
