--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,8 +3,8 @@ import Presentation from "../components/Presentation.astro";
 import StackTechnologies from "../components/StackTechnologies.astro";
 import Layout from "../layouts/Layout.astro";
 import Inspiration from "../components/Inspiration.astro";
-import { PROJECTS } from "../utils/constants";
 import Projects from "../components/Projects.astro";
+import Jobs from "../components/Jobs.astro";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -14,9 +14,7 @@ import Projects from "../components/Projects.astro";
       <StackTechnologies />
       <Inspiration />
     </section>
-    <section class="grid place-content-center mt-4">
-      <p class="text-2xl">PROYECTOS</p>
-    </section>
     <Projects />
+    <Jobs />
   </main>
 </Layout>
