--- a/src/components/SocialPill.astro
+++ b/src/components/SocialPill.astro
@@ -1,7 +1,7 @@
 <a
   class={`
   bg-white/5 
-    border dark:border-white/10 border-gray-300 rounded-full
+    border dark:border-white/10 border-blue-700 rounded-full
     flex justify-center items-center gap-x-2
     py-1 px-2 md:py-2 md:px-4
     text-xs md:text-base
