--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,10 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body class="relative text-white">
-    
+    <div
+      class="absolute top-0 z-[-2] h-full w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"
+    >
+    </div>
     <slot />
   </body>
 </html>
@@ -30,13 +33,13 @@ const { title } = Astro.props;
   }
 
   body {
-    background-color: rgb(15, 16, 22);
     color: rgba(17, 17, 17, 0.9);
     display: flex;
     flex-direction: column;
     align-items: center;
     min-height: 100vh;
     overscroll-behavior: none;
+    padding-bottom: 10px;
   }
 
   @media (prefers-color-scheme: dark) {
