--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Projects from "../components/Projects.astro";
 import Jobs from "../components/Jobs.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="GuarU345-Portfolio">
   <main class="flex flex-col h-full mt-4 gap-4 w-[900px]">
     <section class="grid grid-cols-12 grid-rows-3 gap-4 h-[370px]">
       <Presentation />
