change text of download cv component

--- a/src/components/JobContent.astro
+++ b/src/components/JobContent.astro
@@ -4,7 +4,7 @@ const { title, date, activities } = Astro.props;
 
 <div class="flex gap-2 flex-col rounded-xl bg-zinc-800 p-4">
     <div>
-        <p class="text-lg text-blue-700">{title}</p>
+        <p class="text-lg text-blue-700 font-bold">{title}</p>
         <span class="text-xs text-gray-400">{date}</span>
     </div>
     <p class="text-sm text-balance">{activities}</p>
