--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -10,7 +10,7 @@ const firstProject = PROJECTS[0];
 >
   <div class="flex justify-between items-center">
     <p
-      class="text-3xl bg-clip-text text-transparent bg-gradient-to-r from-white/70 from-10% to-blue-700"
+      class="font-bold text-3xl bg-clip-text text-transparent bg-gradient-to-r from-white/60 from-3% to-blue-700"
     >
       {firstProject.name}
     </p>
