init responsive design

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,8 @@ import Jobs from "../components/Jobs.astro";
 ---
 
 <Layout title="GuarU345-Portfolio">
-  <main class="flex flex-col h-full mt-4 gap-4 w-[900px]">
-    <section class="grid grid-cols-12 grid-rows-3 gap-4 h-[370px]">
+  <main class="flex flex-col h-full mt-4 gap-4 w-full lg:max-w-[900px]">
+    <section class="grid grid-cols-12 grid-rows-3 gap-4">
       <Presentation />
       <StackTechnologies />
       <Inspiration />
