--- a/src/components/Inspiration.astro
+++ b/src/components/Inspiration.astro
@@ -1,5 +1,5 @@
 <section
-  class="col-span-4 row-span-2 flex flex-col border-2 border-transparent justify-center items-center rounded-xl bg-zinc-800"
+  class="col-span-6 lg:col-span-4 lg:row-span-2 flex flex-col border-2 border-transparent justify-center items-center rounded-xl bg-zinc-800"
 >
   <p class="text-xl text-center font-bold">
     "SI PUEDES IMAGINARLO, PUEDES CREARLO"
