--- a/src/components/Jobs.astro
+++ b/src/components/Jobs.astro
@@ -8,7 +8,7 @@ const jarsaData = JOBS[1];
 const argosData = JOBS[2];
 ---
 
-<section class="flex gap-4 w-[900px]">
+<section class="flex gap-4 w-full lg:max-w-[900px]">
   <JobContent
     title={zaroData.title}
     date={zaroData.date}
@@ -20,7 +20,7 @@ const argosData = JOBS[2];
     activities={jarsaData.activities}
   />
 </section>
-<section class="grid grid-cols-[500px,1fr] gap-4 rounded-xl">
+<section class="grid lg:grid-cols-[500px,1fr] gap-4 rounded-xl">
   <JobContent
     title={argosData.title}
     date={argosData.date}
