--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -5,7 +5,7 @@ import GithubIcon from "./icons/GithubIcon.astro";
 ---
 
 <section
-  class="col-span-8 row-span-4 border-2 p-4 border-transparent flex items-end rounded-xl"
+  class="col-span-12 row-span-2 lg:col-span-8 lg:row-span-4 border-2 p-4 border-transparent flex items-end rounded-xl"
 >
   <div class="flex flex-col gap-y-2">
     <p class="text-pretty text-2xl font-bold">Abel Omar Domínguez Martínez</p>
