--- a/src/components/StackTechnologies.astro
+++ b/src/components/StackTechnologies.astro
@@ -3,7 +3,7 @@ import TechIcon from "./TechIcon.astro";
 ---
 
 <section
-  class="col-span-4 row-span-2 grid place-content-center rounded-xl border-2 border-transparent bg-zinc-800"
+  class="col-span-6 lg:col-span-4 lg:row-span-2 grid place-content-center rounded-xl border-2 border-transparent bg-zinc-800"
 >
   <div class="grid place-content-center grid-cols-4 p-4 gap-4 lg:gap-y-10">
     <TechIcon
