is responsive easy?

--- a/src/components/Jobs.astro
+++ b/src/components/Jobs.astro
@@ -8,7 +8,7 @@ const jarsaData = JOBS[1];
 const argosData = JOBS[2];
 ---
 
-<section class="flex gap-4 w-full lg:max-w-[900px]">
+<section class="flex flex-col lg:flex-row gap-4 w-full lg:max-w-[900px]">
   <JobContent
     title={zaroData.title}
     date={zaroData.date}
