--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,7 +39,7 @@ const { title } = Astro.props;
     align-items: center;
     min-height: 100vh;
     overscroll-behavior: none;
-    padding-bottom: 10px;
+    padding: 10px;
   }
 
   @media (prefers-color-scheme: dark) {
